parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;
Rule 2     f_start -> <empty>
Rule 3     f_prog -> <empty>
Rule 4     f_main -> <empty>
Rule 5     f_end -> <empty>
Rule 6     clases -> clases clase
Rule 7     clases -> empty
Rule 8     clase -> TYPE ID f_startclass : ID f_clasepadre { cvars f_cvars funciones } f_endclass
Rule 9     clase -> TYPE ID f_startclass { cvars f_cvars funciones } f_endclass
Rule 10    f_startclass -> <empty>
Rule 11    f_clasepadre -> <empty>
Rule 12    cvars -> cvars DEF tipo dimension : lista_id ;
Rule 13    cvars -> empty
Rule 14    f_cvars -> <empty>
Rule 15    f_endclass -> <empty>
Rule 16    funciones -> funciones funcion
Rule 17    funciones -> empty
Rule 18    funcion -> FUNC ID f_startfunc ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
Rule 19    funcion -> FUNC ID f_startfunc ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc
Rule 20    f_startfunc -> <empty>
Rule 21    f_nothing -> <empty>
Rule 22    f_tipofunc -> <empty>
Rule 23    f_endfunc -> <empty>
Rule 24    vars -> vars DEF tipo dimension : lista_id ;
Rule 25    vars -> vars DEF ID f_varsobj : lista_id_obj ;
Rule 26    vars -> empty
Rule 27    f_varsobj -> <empty>
Rule 28    lista_id -> ID f_vars
Rule 29    lista_id -> lista_id , ID f_vars
Rule 30    f_vars -> <empty>
Rule 31    lista_id_obj -> ID f_vars_obj
Rule 32    lista_id_obj -> lista_id_obj , ID f_vars_obj
Rule 33    f_vars_obj -> <empty>
Rule 34    dimension -> [ NUM f_dim1 ] f_enddim
Rule 35    dimension -> [ NUM f_dim1 ] [ NUM f_dim2 ] f_enddim
Rule 36    dimension -> empty
Rule 37    f_dim1 -> <empty>
Rule 38    f_dim2 -> <empty>
Rule 39    f_enddim -> <empty>
Rule 40    tipo -> NUMBER
Rule 41    tipo -> STRING
Rule 42    params -> pparams
Rule 43    params -> empty
Rule 44    pparams -> tipo ID f_param
Rule 45    pparams -> pparams , tipo ID f_param
Rule 46    f_param -> <empty>
Rule 47    estatutos -> estatutos estatuto
Rule 48    estatutos -> empty
Rule 49    estatuto -> asignacion
Rule 50    estatuto -> while
Rule 51    estatuto -> for
Rule 52    estatuto -> condicion
Rule 53    estatuto -> CALL call_func ;
Rule 54    call_func -> func f_end_call f_end_check
Rule 55    call_func -> input
Rule 56    call_func -> write
Rule 57    call_func -> to_num
Rule 58    call_func -> to_str
Rule 59    call_func -> return
Rule 60    f_end_call -> <empty>
Rule 61    func -> ID f_verify_func ( args )
Rule 62    func -> ID f_varobj : ID f_verify_func_composite ( args )
Rule 63    f_verify_func -> <empty>
Rule 64    f_verify_func_composite -> <empty>
Rule 65    args -> args_list f_end_args
Rule 66    args -> f_end_args
Rule 67    args_list -> expresion f_arg
Rule 68    args_list -> args_list , expresion f_arg
Rule 69    f_arg -> <empty>
Rule 70    f_end_args -> <empty>
Rule 71    asignacion -> var = f_oper expresion ;
Rule 72    var -> ID f_varobj : ID f_verify_type_composite indexacion f_end_check
Rule 73    var -> ID f_verify_type indexacion f_end_check
Rule 74    indexacion -> f_start_array [ expresion f_index ] f_end_array
Rule 75    indexacion -> f_start_array [ expresion f_index ] [ f_next_index expresion f_index ] f_end_array
Rule 76    indexacion -> f_no_index empty
Rule 77    f_varobj -> <empty>
Rule 78    f_end_check -> <empty>
Rule 79    f_verify_type -> <empty>
Rule 80    f_verify_type_composite -> <empty>
Rule 81    f_no_index -> <empty>
Rule 82    f_start_array -> <empty>
Rule 83    f_index -> <empty>
Rule 84    f_next_index -> <empty>
Rule 85    f_end_array -> <empty>
Rule 86    expresion -> exp
Rule 87    expresion -> expresion COMP f_oper exp f_expres
Rule 88    expresion -> STR f_string_expr
Rule 89    f_string_expr -> <empty>
Rule 90    f_expres -> <empty>
Rule 91    exp -> term
Rule 92    exp -> exp OPTERM f_oper term f_exp
Rule 93    f_exp -> <empty>
Rule 94    term -> fact
Rule 95    term -> term OPFACT f_oper fact f_term
Rule 96    f_term -> <empty>
Rule 97    f_oper -> <empty>
Rule 98    fact -> ( lparen expresion ) rparen
Rule 99    fact -> var
Rule 100   fact -> NUM f_fact
Rule 101   fact -> OPTERM NUM
Rule 102   fact -> CALL func f_return_val f_end_call f_end_check
Rule 103   f_return_val -> <empty>
Rule 104   lparen -> <empty>
Rule 105   rparen -> <empty>
Rule 106   f_fact -> <empty>
Rule 107   condicion -> IF ( expresion ) f_if THEN { estatutos } condicionp f_endif
Rule 108   condicionp -> ELSE f_else { estatutos }
Rule 109   condicionp -> empty
Rule 110   f_if -> <empty>
Rule 111   f_endif -> <empty>
Rule 112   f_else -> <empty>
Rule 113   while -> WHILE f_while ( expresion f_exprwhile ) DO { estatutos } f_endwhile
Rule 114   f_while -> <empty>
Rule 115   f_exprwhile -> <empty>
Rule 116   f_endwhile -> <empty>
Rule 117   for -> FOR expresion f_for_start TO expresion f_for_to { estatutos } f_for_end
Rule 118   f_for_start -> <empty>
Rule 119   f_for_to -> <empty>
Rule 120   f_for_end -> <empty>
Rule 121   to_num -> TO_NUMBER ( STR )
Rule 122   to_num -> TO_NUMBER ( var )
Rule 123   to_str -> TO_STRING ( expresion )
Rule 124   input -> INPUT ( var )
Rule 125   write -> PRINT ( write_list )
Rule 126   write_list -> write_list & write_listp
Rule 127   write_list -> write_listp
Rule 128   write_listp -> STR f_string
Rule 129   write_listp -> var
Rule 130   write_listp -> CALL to_str
Rule 131   f_string -> <empty>
Rule 132   return -> RET ( expresion )
Rule 133   empty -> <empty>

Terminals, with rules where they appear

&                    : 126
(                    : 1 18 19 61 62 98 107 113 121 122 123 124 125 132
)                    : 1 18 19 61 62 98 107 113 121 122 123 124 125 132
,                    : 29 32 45 68
:                    : 8 12 18 19 24 25 62 72
;                    : 1 1 12 24 25 53 71
=                    : 71
CALL                 : 53 102 130
COMP                 : 87
DEF                  : 12 24 25
DO                   : 113
ELSE                 : 108
END                  : 1
FOR                  : 117
FUNC                 : 18 19
ID                   : 1 8 8 9 18 19 25 28 29 31 32 44 45 61 62 62 72 72 73
IF                   : 107
INPUT                : 124
MAIN                 : 1
NOTHING              : 19
NUM                  : 34 35 35 100 101
NUMBER               : 40
OPFACT               : 95
OPTERM               : 92 101
PRINT                : 125
PROGRAM              : 1
RET                  : 132
STR                  : 88 121 128
STRING               : 41
THEN                 : 107
TO                   : 117
TO_NUMBER            : 121 122
TO_STRING            : 123
TYPE                 : 8 9
WHILE                : 113
[                    : 34 35 35 74 75 75
]                    : 34 35 35 74 75 75
error                : 
{                    : 1 8 9 18 19 107 108 113 117
}                    : 1 8 9 18 19 107 108 113 117

Nonterminals, with rules where they appear

args                 : 61 62
args_list            : 65 68
asignacion           : 49
call_func            : 53
clase                : 6
clases               : 1 6
condicion            : 52
condicionp           : 107
cvars                : 8 9 12
dimension            : 12 24
empty                : 7 13 17 26 36 43 48 76 109
estatuto             : 47
estatutos            : 1 18 19 47 107 108 113 117
exp                  : 86 87 92
expresion            : 67 68 71 74 75 75 87 98 107 113 117 117 123 132
f_arg                : 67 68
f_clasepadre         : 8
f_cvars              : 8 9
f_dim1               : 34 35
f_dim2               : 35
f_else               : 108
f_end                : 1
f_end_args           : 65 66
f_end_array          : 74 75
f_end_call           : 54 102
f_end_check          : 54 72 73 102
f_endclass           : 8 9
f_enddim             : 34 35
f_endfunc            : 18 19
f_endif              : 107
f_endwhile           : 113
f_exp                : 92
f_expres             : 87
f_exprwhile          : 113
f_fact               : 100
f_for_end            : 117
f_for_start          : 117
f_for_to             : 117
f_if                 : 107
f_index              : 74 75 75
f_main               : 1
f_next_index         : 75
f_no_index           : 76
f_nothing            : 19
f_oper               : 71 87 92 95
f_param              : 44 45
f_prog               : 1
f_return_val         : 102
f_start              : 1
f_start_array        : 74 75
f_startclass         : 8 9
f_startfunc          : 18 19
f_string             : 128
f_string_expr        : 88
f_term               : 95
f_tipofunc           : 18 19
f_varobj             : 62 72
f_vars               : 28 29
f_vars_obj           : 31 32
f_varsobj            : 25
f_verify_func        : 61
f_verify_func_composite : 62
f_verify_type        : 73
f_verify_type_composite : 72
f_while              : 113
fact                 : 94 95
for                  : 51
func                 : 54 102
funcion              : 16
funciones            : 1 8 9 16
indexacion           : 72 73
input                : 55
lista_id             : 12 24 29
lista_id_obj         : 25 32
lparen               : 98
params               : 18 19
pparams              : 42 45
return               : 59
rparen               : 98
start                : 0
term                 : 91 92 95
tipo                 : 12 18 24 44 45
to_num               : 57
to_str               : 58 130
var                  : 71 99 122 124 129
vars                 : 1 18 19 24 25
while                : 50
write                : 56
write_list           : 125 126
write_listp          : 126 127

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;

    PROGRAM         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM . f_start ID f_prog ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;
    (2) f_start -> .

    ID              reduce using rule 2 (f_start -> .)

    f_start                        shift and go to state 3

state 3

    (1) start -> PROGRAM f_start . ID f_prog ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;

    ID              shift and go to state 4


state 4

    (1) start -> PROGRAM f_start ID . f_prog ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;
    (3) f_prog -> .

    ;               reduce using rule 3 (f_prog -> .)

    f_prog                         shift and go to state 5

state 5

    (1) start -> PROGRAM f_start ID f_prog . ; clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;

    ;               shift and go to state 6


state 6

    (1) start -> PROGRAM f_start ID f_prog ; . clases vars funciones MAIN f_main ( ) { estatutos } END f_end ;
    (6) clases -> . clases clase
    (7) clases -> . empty
    (133) empty -> .

    TYPE            reduce using rule 133 (empty -> .)
    DEF             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    clases                         shift and go to state 7
    empty                          shift and go to state 8

state 7

    (1) start -> PROGRAM f_start ID f_prog ; clases . vars funciones MAIN f_main ( ) { estatutos } END f_end ;
    (6) clases -> clases . clase
    (24) vars -> . vars DEF tipo dimension : lista_id ;
    (25) vars -> . vars DEF ID f_varsobj : lista_id_obj ;
    (26) vars -> . empty
    (8) clase -> . TYPE ID f_startclass : ID f_clasepadre { cvars f_cvars funciones } f_endclass
    (9) clase -> . TYPE ID f_startclass { cvars f_cvars funciones } f_endclass
    (133) empty -> .

    TYPE            shift and go to state 12
    DEF             reduce using rule 133 (empty -> .)
    MAIN            reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    vars                           shift and go to state 9
    clase                          shift and go to state 10
    empty                          shift and go to state 11

state 8

    (7) clases -> empty .

    TYPE            reduce using rule 7 (clases -> empty .)
    DEF             reduce using rule 7 (clases -> empty .)
    MAIN            reduce using rule 7 (clases -> empty .)
    FUNC            reduce using rule 7 (clases -> empty .)


state 9

    (1) start -> PROGRAM f_start ID f_prog ; clases vars . funciones MAIN f_main ( ) { estatutos } END f_end ;
    (24) vars -> vars . DEF tipo dimension : lista_id ;
    (25) vars -> vars . DEF ID f_varsobj : lista_id_obj ;
    (16) funciones -> . funciones funcion
    (17) funciones -> . empty
    (133) empty -> .

    DEF             shift and go to state 14
    MAIN            reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    funciones                      shift and go to state 13
    empty                          shift and go to state 15

state 10

    (6) clases -> clases clase .

    TYPE            reduce using rule 6 (clases -> clases clase .)
    DEF             reduce using rule 6 (clases -> clases clase .)
    MAIN            reduce using rule 6 (clases -> clases clase .)
    FUNC            reduce using rule 6 (clases -> clases clase .)


state 11

    (26) vars -> empty .

    DEF             reduce using rule 26 (vars -> empty .)
    MAIN            reduce using rule 26 (vars -> empty .)
    FUNC            reduce using rule 26 (vars -> empty .)
    }               reduce using rule 26 (vars -> empty .)
    CALL            reduce using rule 26 (vars -> empty .)
    WHILE           reduce using rule 26 (vars -> empty .)
    FOR             reduce using rule 26 (vars -> empty .)
    IF              reduce using rule 26 (vars -> empty .)
    ID              reduce using rule 26 (vars -> empty .)


state 12

    (8) clase -> TYPE . ID f_startclass : ID f_clasepadre { cvars f_cvars funciones } f_endclass
    (9) clase -> TYPE . ID f_startclass { cvars f_cvars funciones } f_endclass

    ID              shift and go to state 16


state 13

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones . MAIN f_main ( ) { estatutos } END f_end ;
    (16) funciones -> funciones . funcion
    (18) funcion -> . FUNC ID f_startfunc ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> . FUNC ID f_startfunc ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    MAIN            shift and go to state 17
    FUNC            shift and go to state 19

    funcion                        shift and go to state 18

state 14

    (24) vars -> vars DEF . tipo dimension : lista_id ;
    (25) vars -> vars DEF . ID f_varsobj : lista_id_obj ;
    (40) tipo -> . NUMBER
    (41) tipo -> . STRING

    ID              shift and go to state 21
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23

    tipo                           shift and go to state 20

state 15

    (17) funciones -> empty .

    MAIN            reduce using rule 17 (funciones -> empty .)
    FUNC            reduce using rule 17 (funciones -> empty .)
    }               reduce using rule 17 (funciones -> empty .)


state 16

    (8) clase -> TYPE ID . f_startclass : ID f_clasepadre { cvars f_cvars funciones } f_endclass
    (9) clase -> TYPE ID . f_startclass { cvars f_cvars funciones } f_endclass
    (10) f_startclass -> .

    :               reduce using rule 10 (f_startclass -> .)
    {               reduce using rule 10 (f_startclass -> .)

    f_startclass                   shift and go to state 24

state 17

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN . f_main ( ) { estatutos } END f_end ;
    (4) f_main -> .

    (               reduce using rule 4 (f_main -> .)

    f_main                         shift and go to state 25

state 18

    (16) funciones -> funciones funcion .

    MAIN            reduce using rule 16 (funciones -> funciones funcion .)
    FUNC            reduce using rule 16 (funciones -> funciones funcion .)
    }               reduce using rule 16 (funciones -> funciones funcion .)


state 19

    (18) funcion -> FUNC . ID f_startfunc ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC . ID f_startfunc ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    ID              shift and go to state 26


state 20

    (24) vars -> vars DEF tipo . dimension : lista_id ;
    (34) dimension -> . [ NUM f_dim1 ] f_enddim
    (35) dimension -> . [ NUM f_dim1 ] [ NUM f_dim2 ] f_enddim
    (36) dimension -> . empty
    (133) empty -> .

    [               shift and go to state 28
    :               reduce using rule 133 (empty -> .)

    dimension                      shift and go to state 27
    empty                          shift and go to state 29

state 21

    (25) vars -> vars DEF ID . f_varsobj : lista_id_obj ;
    (27) f_varsobj -> .

    :               reduce using rule 27 (f_varsobj -> .)

    f_varsobj                      shift and go to state 30

state 22

    (40) tipo -> NUMBER .

    [               reduce using rule 40 (tipo -> NUMBER .)
    :               reduce using rule 40 (tipo -> NUMBER .)
    ID              reduce using rule 40 (tipo -> NUMBER .)
    {               reduce using rule 40 (tipo -> NUMBER .)


state 23

    (41) tipo -> STRING .

    [               reduce using rule 41 (tipo -> STRING .)
    :               reduce using rule 41 (tipo -> STRING .)
    ID              reduce using rule 41 (tipo -> STRING .)
    {               reduce using rule 41 (tipo -> STRING .)


state 24

    (8) clase -> TYPE ID f_startclass . : ID f_clasepadre { cvars f_cvars funciones } f_endclass
    (9) clase -> TYPE ID f_startclass . { cvars f_cvars funciones } f_endclass

    :               shift and go to state 31
    {               shift and go to state 32


state 25

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main . ( ) { estatutos } END f_end ;

    (               shift and go to state 33


state 26

    (18) funcion -> FUNC ID . f_startfunc ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC ID . f_startfunc ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc
    (20) f_startfunc -> .

    (               reduce using rule 20 (f_startfunc -> .)

    f_startfunc                    shift and go to state 34

state 27

    (24) vars -> vars DEF tipo dimension . : lista_id ;

    :               shift and go to state 35


state 28

    (34) dimension -> [ . NUM f_dim1 ] f_enddim
    (35) dimension -> [ . NUM f_dim1 ] [ NUM f_dim2 ] f_enddim

    NUM             shift and go to state 36


state 29

    (36) dimension -> empty .

    :               reduce using rule 36 (dimension -> empty .)


state 30

    (25) vars -> vars DEF ID f_varsobj . : lista_id_obj ;

    :               shift and go to state 37


state 31

    (8) clase -> TYPE ID f_startclass : . ID f_clasepadre { cvars f_cvars funciones } f_endclass

    ID              shift and go to state 38


state 32

    (9) clase -> TYPE ID f_startclass { . cvars f_cvars funciones } f_endclass
    (12) cvars -> . cvars DEF tipo dimension : lista_id ;
    (13) cvars -> . empty
    (133) empty -> .

    DEF             reduce using rule 133 (empty -> .)
    }               reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    cvars                          shift and go to state 39
    empty                          shift and go to state 40

state 33

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( . ) { estatutos } END f_end ;

    )               shift and go to state 41


state 34

    (18) funcion -> FUNC ID f_startfunc . ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC ID f_startfunc . ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    (               shift and go to state 42


state 35

    (24) vars -> vars DEF tipo dimension : . lista_id ;
    (28) lista_id -> . ID f_vars
    (29) lista_id -> . lista_id , ID f_vars

    ID              shift and go to state 44

    lista_id                       shift and go to state 43

state 36

    (34) dimension -> [ NUM . f_dim1 ] f_enddim
    (35) dimension -> [ NUM . f_dim1 ] [ NUM f_dim2 ] f_enddim
    (37) f_dim1 -> .

    ]               reduce using rule 37 (f_dim1 -> .)

    f_dim1                         shift and go to state 45

state 37

    (25) vars -> vars DEF ID f_varsobj : . lista_id_obj ;
    (31) lista_id_obj -> . ID f_vars_obj
    (32) lista_id_obj -> . lista_id_obj , ID f_vars_obj

    ID              shift and go to state 46

    lista_id_obj                   shift and go to state 47

state 38

    (8) clase -> TYPE ID f_startclass : ID . f_clasepadre { cvars f_cvars funciones } f_endclass
    (11) f_clasepadre -> .

    {               reduce using rule 11 (f_clasepadre -> .)

    f_clasepadre                   shift and go to state 48

state 39

    (9) clase -> TYPE ID f_startclass { cvars . f_cvars funciones } f_endclass
    (12) cvars -> cvars . DEF tipo dimension : lista_id ;
    (14) f_cvars -> .

    DEF             shift and go to state 50
    }               reduce using rule 14 (f_cvars -> .)
    FUNC            reduce using rule 14 (f_cvars -> .)

    f_cvars                        shift and go to state 49

state 40

    (13) cvars -> empty .

    DEF             reduce using rule 13 (cvars -> empty .)
    }               reduce using rule 13 (cvars -> empty .)
    FUNC            reduce using rule 13 (cvars -> empty .)


state 41

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( ) . { estatutos } END f_end ;

    {               shift and go to state 51


state 42

    (18) funcion -> FUNC ID f_startfunc ( . params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC ID f_startfunc ( . params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc
    (42) params -> . pparams
    (43) params -> . empty
    (44) pparams -> . tipo ID f_param
    (45) pparams -> . pparams , tipo ID f_param
    (133) empty -> .
    (40) tipo -> . NUMBER
    (41) tipo -> . STRING

    )               reduce using rule 133 (empty -> .)
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23

    params                         shift and go to state 52
    tipo                           shift and go to state 53
    pparams                        shift and go to state 54
    empty                          shift and go to state 55

state 43

    (24) vars -> vars DEF tipo dimension : lista_id . ;
    (29) lista_id -> lista_id . , ID f_vars

    ;               shift and go to state 56
    ,               shift and go to state 57


state 44

    (28) lista_id -> ID . f_vars
    (30) f_vars -> .

    ;               reduce using rule 30 (f_vars -> .)
    ,               reduce using rule 30 (f_vars -> .)

    f_vars                         shift and go to state 58

state 45

    (34) dimension -> [ NUM f_dim1 . ] f_enddim
    (35) dimension -> [ NUM f_dim1 . ] [ NUM f_dim2 ] f_enddim

    ]               shift and go to state 59


state 46

    (31) lista_id_obj -> ID . f_vars_obj
    (33) f_vars_obj -> .

    ;               reduce using rule 33 (f_vars_obj -> .)
    ,               reduce using rule 33 (f_vars_obj -> .)

    f_vars_obj                     shift and go to state 60

state 47

    (25) vars -> vars DEF ID f_varsobj : lista_id_obj . ;
    (32) lista_id_obj -> lista_id_obj . , ID f_vars_obj

    ;               shift and go to state 61
    ,               shift and go to state 62


state 48

    (8) clase -> TYPE ID f_startclass : ID f_clasepadre . { cvars f_cvars funciones } f_endclass

    {               shift and go to state 63


state 49

    (9) clase -> TYPE ID f_startclass { cvars f_cvars . funciones } f_endclass
    (16) funciones -> . funciones funcion
    (17) funciones -> . empty
    (133) empty -> .

    }               reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    funciones                      shift and go to state 64
    empty                          shift and go to state 15

state 50

    (12) cvars -> cvars DEF . tipo dimension : lista_id ;
    (40) tipo -> . NUMBER
    (41) tipo -> . STRING

    NUMBER          shift and go to state 22
    STRING          shift and go to state 23

    tipo                           shift and go to state 65

state 51

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( ) { . estatutos } END f_end ;
    (47) estatutos -> . estatutos estatuto
    (48) estatutos -> . empty
    (133) empty -> .

    }               reduce using rule 133 (empty -> .)
    CALL            reduce using rule 133 (empty -> .)
    WHILE           reduce using rule 133 (empty -> .)
    FOR             reduce using rule 133 (empty -> .)
    IF              reduce using rule 133 (empty -> .)
    ID              reduce using rule 133 (empty -> .)

    estatutos                      shift and go to state 66
    empty                          shift and go to state 67

state 52

    (18) funcion -> FUNC ID f_startfunc ( params . ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC ID f_startfunc ( params . ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    )               shift and go to state 68


state 53

    (44) pparams -> tipo . ID f_param

    ID              shift and go to state 69


state 54

    (42) params -> pparams .
    (45) pparams -> pparams . , tipo ID f_param

    )               reduce using rule 42 (params -> pparams .)
    ,               shift and go to state 70


state 55

    (43) params -> empty .

    )               reduce using rule 43 (params -> empty .)


state 56

    (24) vars -> vars DEF tipo dimension : lista_id ; .

    DEF             reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    MAIN            reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    FUNC            reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    }               reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    CALL            reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    WHILE           reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    FOR             reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    IF              reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)
    ID              reduce using rule 24 (vars -> vars DEF tipo dimension : lista_id ; .)


state 57

    (29) lista_id -> lista_id , . ID f_vars

    ID              shift and go to state 71


state 58

    (28) lista_id -> ID f_vars .

    ;               reduce using rule 28 (lista_id -> ID f_vars .)
    ,               reduce using rule 28 (lista_id -> ID f_vars .)


state 59

    (34) dimension -> [ NUM f_dim1 ] . f_enddim
    (35) dimension -> [ NUM f_dim1 ] . [ NUM f_dim2 ] f_enddim
    (39) f_enddim -> .

    [               shift and go to state 72
    :               reduce using rule 39 (f_enddim -> .)

    f_enddim                       shift and go to state 73

state 60

    (31) lista_id_obj -> ID f_vars_obj .

    ;               reduce using rule 31 (lista_id_obj -> ID f_vars_obj .)
    ,               reduce using rule 31 (lista_id_obj -> ID f_vars_obj .)


state 61

    (25) vars -> vars DEF ID f_varsobj : lista_id_obj ; .

    DEF             reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    MAIN            reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    FUNC            reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    }               reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    CALL            reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    WHILE           reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    FOR             reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    IF              reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)
    ID              reduce using rule 25 (vars -> vars DEF ID f_varsobj : lista_id_obj ; .)


state 62

    (32) lista_id_obj -> lista_id_obj , . ID f_vars_obj

    ID              shift and go to state 74


state 63

    (8) clase -> TYPE ID f_startclass : ID f_clasepadre { . cvars f_cvars funciones } f_endclass
    (12) cvars -> . cvars DEF tipo dimension : lista_id ;
    (13) cvars -> . empty
    (133) empty -> .

    DEF             reduce using rule 133 (empty -> .)
    }               reduce using rule 133 (empty -> .)
    FUNC            reduce using rule 133 (empty -> .)

    cvars                          shift and go to state 75
    empty                          shift and go to state 40

state 64

    (9) clase -> TYPE ID f_startclass { cvars f_cvars funciones . } f_endclass
    (16) funciones -> funciones . funcion
    (18) funcion -> . FUNC ID f_startfunc ( params ) : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> . FUNC ID f_startfunc ( params ) : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    }               shift and go to state 76
    FUNC            shift and go to state 19

    funcion                        shift and go to state 18

state 65

    (12) cvars -> cvars DEF tipo . dimension : lista_id ;
    (34) dimension -> . [ NUM f_dim1 ] f_enddim
    (35) dimension -> . [ NUM f_dim1 ] [ NUM f_dim2 ] f_enddim
    (36) dimension -> . empty
    (133) empty -> .

    [               shift and go to state 28
    :               reduce using rule 133 (empty -> .)

    dimension                      shift and go to state 77
    empty                          shift and go to state 29

state 66

    (1) start -> PROGRAM f_start ID f_prog ; clases vars funciones MAIN f_main ( ) { estatutos . } END f_end ;
    (47) estatutos -> estatutos . estatuto
    (49) estatuto -> . asignacion
    (50) estatuto -> . while
    (51) estatuto -> . for
    (52) estatuto -> . condicion
    (53) estatuto -> . CALL call_func ;
    (71) asignacion -> . var = f_oper expresion ;
    (113) while -> . WHILE f_while ( expresion f_exprwhile ) DO { estatutos } f_endwhile
    (117) for -> . FOR expresion f_for_start TO expresion f_for_to { estatutos } f_for_end
    (107) condicion -> . IF ( expresion ) f_if THEN { estatutos } condicionp f_endif
    (72) var -> . ID f_varobj : ID f_verify_type_composite indexacion f_end_check
    (73) var -> . ID f_verify_type indexacion f_end_check

    }               shift and go to state 79
    CALL            shift and go to state 85
    WHILE           shift and go to state 87
    FOR             shift and go to state 88
    IF              shift and go to state 89
    ID              shift and go to state 78

    estatuto                       shift and go to state 80
    asignacion                     shift and go to state 81
    while                          shift and go to state 82
    for                            shift and go to state 83
    condicion                      shift and go to state 84
    var                            shift and go to state 86

state 67

    (48) estatutos -> empty .

    }               reduce using rule 48 (estatutos -> empty .)
    CALL            reduce using rule 48 (estatutos -> empty .)
    WHILE           reduce using rule 48 (estatutos -> empty .)
    FOR             reduce using rule 48 (estatutos -> empty .)
    IF              reduce using rule 48 (estatutos -> empty .)
    ID              reduce using rule 48 (estatutos -> empty .)


state 68

    (18) funcion -> FUNC ID f_startfunc ( params ) . : tipo f_tipofunc { vars estatutos } f_endfunc
    (19) funcion -> FUNC ID f_startfunc ( params ) . : NOTHING f_nothing f_tipofunc { vars estatutos } f_endfunc

    :               shift and go to state 90


state 69

    (44) pparams -> tipo ID . f_param
    (46) f_param -> .

    ,               reduce using rule 46 (f_param -> .)
    )               reduce using rule 46 (f_param -> .)

    f_param                        shift and go to state 91

state 70

    (45) pparams -> pparams , . tipo ID f_param
    (40) tipo -> . NUMBER
    (41) tipo -> . STRING

    NUMBER          shift and go to state 22
    STRING          shift and go to state 23

    tipo                           shift and go to state 92

state 71

    (29) lista_id -> lista_id , ID . f_vars
    (30) f_vars -> .

    ;               reduce using rule 30 (f_vars -> .)
    ,               reduce using rule 30 (f_vars -> .)

    f_vars                         shift and go to state 93

state 72

    (35) dimension -> [ NUM f_dim1 ] [ . NUM f_dim2 ] f_enddim

    NUM             shift and go to state 94


state 73

    (34) dimension -> [ NUM f_dim1 ] f_enddim .

    :               reduce using rule 34 (dimension -> [ NUM f_dim1 ] f_enddim .)


state 74

    (32) lista_id_obj -> lista_id_obj , ID . f_vars_obj
    (33) f_vars_obj -> .

    ;               reduce using rule 33 (f_vars_obj -> .)
    ,               reduce using rule 33 (f_vars_obj -> .)

    f_vars_obj                     shift and go to state 95

state 75

    (8) clase -> TYPE ID f_startclass : ID f_clasepadre { cvars . f_cvars funciones } f_endclass
    (12) cvars -> cvars . DEF tipo dimension : lista_id ;
    (14) f_cvars -> .

    DEF             shift and go to state 50
    }               reduce using rule 14 (f_cvars -> .)
    FUNC            reduce using rule 14 (f_cvars -> .)

    f_cvars                        shift and go to state 96

state 76

    (9) clase -> TYPE ID f_startclass { cvars f_cvars funciones } . f_endclass
    (15) f_endclass -> .

    TYPE            reduce using rule 15 (f_endclass -> .)
    DEF             reduce using rule 15 (f_endclass -> .)
    MAIN            reduce using rule 15 (f_endclass -> .)
    FUNC            reduce using rule 15 (f_endclass -> .)

    f_endclass                     shift and go to state 97

state 77

    (12) cvars -> cvars DEF tipo dimension . : lista_id ;

    :               shift and go to state 98


state 78
